# pca

./: .gitignore  artifacts.py  aruco.py  capture.py  config.py  control.py  dataset.py  inference.py  main.py  model.py  preprocess.py  pyproject.toml  report.md  run_dev.py  stream.py  train.py  training_progress.py  viz.py
DFRobot_RaspberryPi_Motor/examples/: DC_Motor_Demo.py
frontend/: package.json  vite.config.ts
frontend/src/: App.vue  style.css  types.ts
frontend/src/components/: DatasetStats.vue  MetricChart.vue  PredictionPanel.vue  StateDisplay.vue  TrainPanel.vue  VideoStream.vue
frontend/src/composables/: useKeyboard.ts
pca/: pca.py
