[project]
name = "pca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiortc>=1.14.0",
    "fastapi[standard]>=0.139.0",
    "numpy>=2.5.1",
    "opencv-contrib-python>=5.0.0.93",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
